...
    <string name="voice_delete_recording">Delete recording</string>
    <string name="voice_finish_recording">Finish recording</string>
    <string name="attachment_cancel">Cancel transfer</string>
    <string name="attachment_actions">Attachment actions</string>
    <string name="attachment_continue_anyway">Continue anyway</string>
...
    <string name="settings_security_category_end_to_end_duration_summary">When enabled, encryption request sent to contacts would expire after <b>1 hour</b> of not being agreed.</string>

    <string name="settings_SMS_routing_title">Forwarded History</string>
    <string name="settings_SMS_listening_title">SMS listening</string>
    <string name="settings_SMS_listening_server">Configure SMS listening Gateways</string>
...
    <string name="unblock">Unblock</string>
    <string name="welcome_image">Welcome image</string>
    <string name="remote_listeners">Remote listeners</string>
    <string name="port">"Port: "</string>
    <string name="virtual_host">"Virtual host: "</string>
...
    <string name="secure_conversation">Secure conversation!</string>
    <string name="empty_encrypted_cipher_something_went_wrong">Empty encrypted cipher... something went wrong!</string>
    <string name="gateway_clients">Gateway Clients</string>
    <string name="list_gateway_clients">List gateway clients</string>
    <string name="enter_url">Enter Url</string>
...
    <string name="oneui_selection_count">Selected: %1$d</string>
    <string name="oneui_conversation_selected">Conversation selected</string>
    <string name="oneui_cancel">Cancel</string>
    <string name="oneui_select_recipient">Select recipient</string>
    <string name="oneui_remove_recipient">Remove recipient</string>
...
    <string name="oneui_message_hint">Message</string>
    <string name="oneui_send">Send</string>
    <string name="oneui_back">Back</string>
    <string name="oneui_secure_plain">Not secure</string>
    <string name="oneui_secure_negotiating">Setting up secure chat</string>
...
    <string name="oneui_route_unknown">Unknown</string>
    <string name="oneui_notification_reply_failed">Reply was not sent. Open the conversation to review its security state.</string>
    <string name="theme">Theme</string>
    <string name="_switch">Switch</string>
    <string name="oneui_media_saved">Attachment saved.</string>
...
    <string name="oneui_unencrypted_resend_message">This message was intended to be encrypted. When sent with %1$s, it will be sent as an ordinary unencrypted message.</string>
    <string name="oneui_send_unencrypted">Send anyway</string>
    <string name="oneui_secure_message_transport">Secure message transport</string>
    <string name="oneui_transport_standard_sms">Standard SMS</string>
    <string name="oneui_transport_data_sms">Data SMS</string>
    <string name="oneui_data_sms_warning_title">Enable Data SMS?</string>
    <string name="oneui_data_sms_warning_message">Data SMS works only when the recipient uses this app with the same transport enabled. The first secure message in each chat will still be sent as a standard SMS. Later secure messages will not appear in other SMS apps and may be lost if the recipient cannot receive Data SMS.</string>
    <string name="oneui_enable_data_sms">Enable</string>
    <string name="oneui_media_transport">Media transport</string>
    <string name="oneui_media_transport_mms">MMS (default)</string>
    <string name="oneui_media_transport_data_sms">SMS packets</string>
    <string name="oneui_media_transport_standard_sms">Compatible ordinary SMS</string>
    <string name="oneui_media_transport_cloud">Internet storage</string>
...
    <string name="oneui_settings_notifications">Notifications</string>
    <string name="oneui_settings_gateway_tools">Gateways and routing</string>
    <string name="oneui_media_data_sms_warning_title">Send media as SMS packets?</string>
    <string name="oneui_media_data_sms_warning_message">Files will be split into many Data SMS messages and can only be received by this app. Carrier SMS charges may apply. Receiving remains automatic and does not require the other person to select the same outgoing transport.</string>
    <string name="oneui_media_standard_sms_warning_title">Send media using ordinary SMS?</string>
...
